<resources>
    <string name="app_name">Unity Mod Manager</string>
    <string name="menu_launch_game">Launch Game</string>
    <string name="nav_home">Home</string>
    <string name="nav_mod">Modules</string>
    <string name="nav_attach">Add-on</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_system">System</string>
    <string name="nav_info">About</string>
    <string name="info_context_text">
        This program is open source under the GPL agreement at Github and should not be used for commercial purposes.\n
        The birth of this program is inseparable from the following open source projects:\n
        UnityStudio, miniz, VirtualXposed, AndroidP7zip, ExFilePicker, android-about-page, CheckVersionLib, AndroidImageSlider. \n
        Thanks to the following translator:\n
        Traditional Chinese - 栗子\n
        Russian - onemeshnig\n
        Korean - Bebridge
    </string>
    <string name="home_summary_context">
        Enabled modules: %d\nInstalled modules: %d\nInstalled add-on: %d\nVisible applications: %d\nApplications in VirtualApp: %d
    </string>
    <string name="home_latest_version">Latest Version: %s</string>
    <string name="home_latest_version_default">Latest Version: ...</string>
    <string name="home_current_version">Current Version: %s</string>
    <string name="home_client_uninstalled">Click to install client.</string>
    <string name="home_client_installed">Client version: %s</string>
    <string name="client_list_item_icon">icon</string>
    <string name="progress_dialog_processing">Processing...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="attach_delete_confirm_message">Delete [%s] add-on?</string>
    <string name="visibility_delete_confirm_message">Remove [%s] visibility?</string>
    <string name="attach_delete_fail">Failed to delete add-on!</string>
    <string name="attach_delete_success">Add-on has successfully installed.</string>
    <string name="visibility_delete_success">App visibility deleted successfully.</string>
    <string name="banner_content_description">Unity</string>
    <string name="nav_visibility">App Visibility</string>
    <string name="mod_file_delete_failed">WARNING! Failed to delete module file: %s!</string>
    <string name="mod_delete_confirm">Delete module: %s?</string>
    <string name="store_mkdir_failed">Failed to create directory! Please make sure the Storage permission has been granted in Settings.</string>
    <string name="import_mod_exists">Import failed! %s is already exists.</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_message">In progress...</string>
    <string name="please_input_password">Enter password</string>
    <string name="mod_list_item_content">%d</string>
    <string name="home_map_file">Click to generate mapping file (external resources need to download first)</string>
    <string name="map_file_size">File mapping record (click to regenerate): %d</string>
    <string name="mod_info_description">Introduction:\n%s</string>
    <string name="mod_info_name">%s</string>
    <string name="mod_info_author">Author: %s</string>
    <string name="install_source_not_found">Navigate to home to install client first. Make sure the client installation source is not uninstalled or deleted.</string>
    <string name="unsupport_operation">Operation denied.</string>
    <string name="install_mods_failed">Failed to install module! Please clear the app data and try again, or go to bilibili to seek for help.</string>
    <string name="install_mods_obb_error">Failed to modify OBB file! Please make sure the installed client has corresponding OBB file, or toggle off OBB patch and try again.</string>
    <string name="install_mods_root_error">Failed to grant root permission! Please make sure your device has been rooted, or switch to another APK resource modification mode and try again.</string>
    <string name="no_storage_permissions">Failed to grant Phone permission! Please make sure the Phone permission has been granted in Settings. This app wouldn\'t run if Phone permission is not granted.</string>
    <string name="external_mods_observer_start">Start monitoring external module: %s</string>
    <string name="external_mods_observer_stop">Stop monitoring external module: %s</string>
    <string name="no_preview_info_in_mod">No information can be viewed in this module.</string>
    <string name="input_mod_password">Enter password [%s], wrong password tried count: %s</string>
    <string name="choose_client">Select a client</string>
    <string name="choose_in_file">Select from file</string>
    <string name="skip">Skip</string>
    <string name="new_version_release">New version released: %s</string>
    <string name="update_logs">Changelog: %s \n\n If failed to update, please go to https://github.com/xausky/UnityModManager/releases and manually download APK.</string>
    <string name="install_failed">Installation failed!</string>
    <string name="install_success">Successfully installed!</string>
    <string name="install_success_create_shortcut">Successfully installed! You can tap to create game shortcut in the Settings panel.</string>
    <string name="shortcut_postfix">[Mod Manager]</string>
    <string name="create_backup_folder_failed">Failed to create backup directory!</string>
    <string name="install_client_download_resource">Please install a client and download hotfix first.</string>
    <string name="map_file_generate_success">File mapping is generated successfully.</string>
    <string name="confirm_modify_source">Please make sure there have at least one modifiable source.</string>
    <string name="my_email">Email</string>
    <string name="my_bilibili">Bilibili</string>
    <string name="my_github">Github</string>
    <string name="improved_translation">Improve translation</string>
    <string name="install_client_and_generate_map_file_first">Please install a client first to generate the index.</string>
    <string name="external_mod_import_model">External module directory import mode. NOT recommended for non-mod developers.</string>
    <string name="checked_external_mod_changed">External module changes detected! game will restart.</string>
    <string name="import_mod">Import modules</string>
    <string name="package_export_success">Successfulled export integration package: [%s]</string>
    <string name="package_export_failed">Failed to export the integration package! Please make sure the Storage permission has been granted in Settings.</string>
    <string name="apk_modify_model_title">APK resource modification mode</string>
    <string name="apk_modify_model_summary">Select how to modify the resources in the APK. If you select "No modification", APK resource wouldn\'t be modified, you can continue to use persistent resource patches.</string>
    <string name="persistent_support_title">Persistent resource patch support</string>
    <string name="persistent_support_summary">Provide Unity\'s PersistentDataPath path resource patch support, such as \"Honkai Impact 3\" UC version.</string>
    <string name="setting_export_apk_title">Export Integrated APK file</string>
    <string name="setting_export_apk_summary">Click to export the patched APK file to out.apk in the internal storage root directory.</string>
    <string name="create_shortcut_title">Create a game shortcut</string>
    <string name="create_shortcut_summary">You can open the game directly from desktop in the virtual environment without opening the manager.</string>
    <string name="none_modify_export">Unable to export integrated package No Modify APK mode</string>
    <string name="no_virtual_model_shortcut">VirtualApp Model doesn\'t exist in manager, create shortcuts failed. You can directly open the app directly in app drawer.</string>
    <string-array name="apk_modify_model">
        <item>No Modification</item>
        <item>VirtualApp Model</item>
        <item>Root Privilege Mode (Proceed with caution)</item>
        <item>Hook Model</item>
    </string-array>
    <string-array name="apk_modify_model_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="obb_support_title">Android OBB patch resource file support</string>
    <string name="obb_support_summary">ONLY toggle on if your app supports OBB file patching, such as \"Honkai Impact 3\" JP server, SEA server and global server.</string>
    <string name="apk_none_obb_support">Using OBB support without changing APK mode may cause the game fail to start!</string>
    <string name="mod_list_item_content_default">0</string>
    <string name="mod_list_item_conflict_default">0</string>
    <string name="mod_list_item_author_default">unknown</string>
    <string name="mod_info_conflict">Conflicted files: %s</string>
    <string name="show_conflict_info_title">View conflicted module file information</string>
    <string name="show_conflict_info_summary">View conflicted module file information, this can let module authors easy to debug.</string>
    <string name="valid_files_zero">Valid module files [%s] is zero. Please make sure file mapping is generated correctly.</string>
    <string name="mod_decompression_error">Module [%s] unzip error, please make sure the module file doesn\'t corrupted.</string>
    <string name="not_available_non_virtual">This feature is not available for non-virtual mode.</string>
    <string name="nav_online_mods">Online Modules</string>
    <string name="install_client_remove_all_mod_confirm">Does the legacy module has been deleted in original cilent?</string>
    <string name="copy_login_info_title">Copy Login Information</string>
    <string name="copy_login_info_summary">Copy login information to clipboard to import other devices. Root permission is required.</string>
    <string name="import_login_info_title">Import Login Information</string>
    <string name="import_login_info_summary">Import the login information from the clipboard into the device.</string>
    <string name="copy_login_success">Copying login information succeeded!</string>
    <string name="copy_login_failed_unsupported">Copying login information failed, unsupported game!</string>
    <string name="copy_login_failed">Failed to copy login information, make sure Root permissions and game are logged in!</string>
    <string name="import_login_failed_empty">Failed to import login information, it seems that there is no login information in Clipboard!</string>
    <string name="import_login_success">Importing login information succeeded!</string>
    <string name="import_login_failed_unsupported">Failed to import login information, unsupported games!</string>
    <string name="import_login_failed">Failed to import login information!</string>
</resources>
