<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/mod_info_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#000000" />
    <TextView
        android:id="@+id/mod_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:text="@string/mod_info_name"/>
    <TextView
        android:id="@+id/mod_info_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/mod_info_author"/>
    <TextView
        android:id="@+id/mod_info_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:autoLink="all"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/mod_info_description"/>
    <TextView
        android:id="@+id/mod_info_conflict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/mod_info_conflict"/>
</LinearLayout>
