<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/home_latest_version"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_remove_circle"
                android:drawableLeft="@drawable/ic_remove_circle"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:text="@string/home_latest_version_default" />
            <TextView
                android:id="@+id/home_current_version"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_check_circle"
                android:drawableLeft="@drawable/ic_check_circle"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:text="@string/home_current_version" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_client_state_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="8dp">
            <TextView
                android:id="@+id/home_client_state"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_clear"
                android:drawableLeft="@drawable/ic_clear"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/home_client_uninstalled" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/home_map_file_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/home_map_file"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_clear"
            android:drawableLeft="@drawable/ic_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/home_map_file" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/home_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@android:string/unknownName" />
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="ca-app-pub-5364789594685674/1018461293">
            </com.google.android.gms.ads.AdView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
</LinearLayout>
